# rxdock

./: .gitignore  CODE_OF_CONDUCT.md  CODE_OF_MERIT.md  INSTALL  INSTALL.md  README.md  meson.build  meson_options.txt
.github/workflows/: main.yml
data/: atomic-solvation.json  cnx.rtf  elements.json  ionic-atom-charges.json  masses.rtf  top_all22_prot_na.inp  tripos-5-2-dihedrals.json  tripos-5-2-vdw.json
data/filters/: gpfilter295.filter
data/pmf/: CFC3.pmf  CFCF.pmf  CFCN.pmf  CFCO.pmf  CFCP.pmf  CFCW.pmf  CFF_.pmf  CFHL.pmf  CFNA.pmf  CFNC.pmf  CFND.pmf  CFNP.pmf  CFNR.pmf  CFNS.pmf  CFOA.pmf  CFOC.pmf  CFOD.pmf  CFOE.pmf  CFOR.pmf  CFOS.pmf  CFP_.pmf  CFSA.pmf  CFSD.pmf  CNC3.pmf  CNCF.pmf  CNCN.pmf  CNCO.pmf  CNCP.pmf  CNCW.pmf  CNHL.pmf  CNNC.pmf  CNND.pmf  CNNP.pmf  CNNR.pmf  CNNS.pmf  CNOA.pmf  CNOC.pmf  CNOD.pmf  CNOE.pmf  CNOS.pmf  (+219 more)
data/scripts/: dock-grid-based.json  dock-solvation-grid-based.json  dock-solvation.json  dock.json  dock.prm  dock_grid.prm  dock_solv.prm  dock_solv_grid.prm  minimise-solvation.json  minimise.json  minimise.prm  minimise_solv.prm  score-pmf.json  score-solvation.json  score.json  score.prm  score_pmf.prm  score_solv.prm
data/sf/: InterGridSF.prm  InterIdxSF.prm  IntraSF.prm  IonicAtoms.prm  PMFIdxSF.prm  RbtInterGridSF.prm  RbtInterIdxSF.prm  RbtIntraSF.prm  RbtIonicAtoms.prm  RbtPMFIdxSF.prm  RbtSolvGridSF.prm  RbtSolvIdxSF.prm  RbtTargetSF.prm  SolvGridSF.prm  SolvIdxSF.prm  TargetSF.prm  Tripos52_dihedrals.prm  Tripos52_vdw.prm  Tripos52_vdw.prm.old  calcgrid_vdw1.prm  calcgrid_vdw5.prm  intermolecular-grid-based.json  intermolecular-indexed.json  intermolecular-solvation-grid-based.json  intermolecular-solvation-indexed.json  intra-ligand.json  intra-target.json  protein-ligand-pmf-indexed.json  solvation_asp.prm  vdw-potential-ecut-1.json  vdw-potential-ecut-5.json
data/support/: quotes.json
docs/: CHANGES  EULA.txt  FILES  Makefile  README  VERSIONS  code-of-counduct.rst  code-of-merit.rst  conf.py  index.rst  license.rst  make.bat  rDock_getting_started.html  rDock_getting_started.xml  rDock_reference_guide.html  rDock_reference_guide.xml  rdock.xpr
docs/_static/: bizstyle-rdock.css
docs/api/: Doxyfile  index.dox
docs/developer-guide/: build-system.rst  coding-standards.rst  documentation.rst  target-platforms.rst  versioning.rst
docs/getting-started-guide/: building.rst  index.rst  overview.rst  prerequisites.rst  quick-and-dirty-installation.rst  unpacking.rst  validation-experiments.rst
docs/newDocs/: HowToCompile.tex  INSTALL.aux  INSTALL.idx  INSTALL.ilg  INSTALL.ind  INSTALL.out  INSTALL.tex  INSTALL.toc  Installation.aux  Installation.tex  Introduction.aux  Introduction.tex
docs/reference-guide/: acknowledgements.rst  appendix.rst  atom-typing.rst  cavity-mapping.rst  configuration.rst  docking-protocol.rst  file-formats.rst  index.rst  introduction.rst  preface.rst  programs.rst  scoring-functions.rst  system-definition-file.rst  use-cases.rst
docs/tutorials/: calculating-roc-curves.rst  index.rst  multi-step-protocol-for-htvs.rst  pharmacophoric-restraints.rst
docs/user-guide/: calculating-roc-curves.rst  docking-in-3-steps.rst  docking-strategies.rst  multi-step-protocol-for-htvs.rst  pharmacophoric-restraints.rst  running-docking-jobs-in-parallel.rst
include/: AlignTransform.h  Atom.h  BaseFileSink.h  BaseGrid.h  BaseIdxSF.h  BaseInterSF.h  BaseIntraSF.h  BaseMolecularFileSource.h  BaseObject.h  BaseTransform.h  BiMolWorkSpace.h  Bond.h  Cavity.h  CavityFillSF.h  CharmmDataSource.h  CharmmTypesFileSource.h  ChromDihedralElement.h  ChromOccupancyElement.h  Commands.h  Config.h  Context.h  Coord.h  Debug.h  DihedralIntraSF.h  DihedralSF.h  DockingSite.h  Error.h  Euler.h  FFTGrid.h  FileError.h  Filter.h  FilterExpression.h  FilterExpressionVisitor.h  Genome.h  InteractionGrid.h  InteractionTemplate.h  MOEGrid.h  MdlFileSink.h  ModelMutator.h  NMCriteria.h  (+193 more)
include/GP/: Cell.h  Command.h  GPChromosome.h  GPFFCHK1.h  GPFFSpike.h  RbtCell.h  RbtCommand.h  RbtGPChromosome.h  RbtGPFFCHK1.h  RbtGPFFCrossDock.h  RbtGPFFGold.h  RbtGPFFHSP90.h  RbtGPFFSpike.h  RbtGPFitnessFunction.h  RbtGPGenome.h  RbtGPParser.h  RbtGPPopulation.h  RbtGPTypes.h
include/rxdock/: AlignTransform.h  Annotation.h  AnnotationHandler.h  AromIdxSF.h  Atom.h  AtomFuncs.h  BaseBiMolTransform.h  BaseFileSink.h  BaseFileSource.h  BaseGrid.h  BaseIdxSF.h  BaseInterSF.h  BaseIntraSF.h  BaseMolecularDataSource.h  BaseMolecularFileSink.h  BaseMolecularFileSource.h  BaseObject.h  BaseSF.h  BaseTransform.h  BaseUniMolTransform.h  BiMolWorkSpace.h  Bond.h  CSVFileSink.h  Cavity.h  CavityFillSF.h  CavityGridSF.h  CellTokenIter.h  CharmmDataSource.h  CharmmTypesFileSource.h  Chrom.h  ChromDihedralElement.h  ChromDihedralRefData.h  ChromElement.h  ChromFactory.h  ChromOccupancyElement.h  ChromOccupancyRefData.h  ChromPositionElement.h  ChromPositionRefData.h  Config.h  ConstSF.h  (+105 more)
lib/: AlignTransform.cxx  Annotation.cxx  AnnotationHandler.cxx  AromIdxSF.cxx  Atom.cxx  AtomFuncs.cxx  BaseBiMolTransform.cxx  BaseFileSink.cxx  BaseFileSource.cxx  BaseGrid.cxx  BaseIdxSF.cxx  BaseInterSF.cxx  BaseIntraSF.cxx  BaseMolecularFileSink.cxx  BaseMolecularFileSource.cxx  BaseObject.cxx  BaseSF.cxx  BaseTransform.cxx  BaseUniMolTransform.cxx  BiMolWorkSpace.cxx  Bond.cxx  CSVFileSink.cxx  CavityFillSF.cxx  CavityGridSF.cxx  CellTokenIter.cxx  CharmmDataSource.cxx  CharmmTypesFileSource.cxx  Chrom.cxx  ChromDihedralElement.cxx  ChromDihedralRefData.cxx  ChromElement.cxx  ChromFactory.cxx  ChromOccupancyElement.cxx  ChromOccupancyRefData.cxx  ChromPositionElement.cxx  ChromPositionRefData.cxx  ConstSF.cxx  Constraint.cxx  Context.cxx  CrdFileSink.cxx  (+85 more)
popt/: Doxyfile  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libpopt.vers  libtool  popthelp.c  test1  test2  test3
subprojects/: cxxopts.wrap  eigen.wrap  emilk-loguru.wrap  fmt.wrap  nlohmann_json.wrap  pcg.wrap
tests/: ChromTest.cxx  ChromTest.h  Main.cxx  OccupancyTest.cxx  OccupancyTest.h  SearchTest.cxx  SearchTest.h
(+406 files in other folders)
